--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,8 +35,8 @@
 <body>
     <main>
         <h1>Welcome to burger store!</h1>
-        <img src="burger.png" alt="">
-        <a href="makeOrder"><h2>Press to your first order</h2></a>
+        <img th:src="@{burger.png}" alt="">
+        <a th:href="@{assembleBurger}"><h2>Press to your first order</h2></a>
     </main>
 
 </body>
