--- a/src/main/resources/templates/html/makeOrder.html
+++ b/src/main/resources/templates/html/makeOrder.html
@@ -5,13 +5,48 @@
     <meta charset="UTF-8">
     <title>Make an order</title>
 </head>
+<style>
+    form {
+        display: flex;
+        flex-direction: column;
+    }
 
+    form button {
+        width: 200px;
+    }
+
+    .address {
+        display: flex;
+        flex-direction: row;
+    }
+</style>
 <body>
-    <h1>Your Order</h1>
-    <hr>
-    <ul class="designed-burgers" th:each="burger: ${orderComponents}">
-        <p th:text="${burger.name}">NAME</p>
-        <li th:text="${burger.ingredients}">BURGER COMPONENTS</li>
-    </ul>
+<h1>Your Order</h1>
+<hr>
+<ul class="designed-burgers" th:each="burger: ${orderComponents}">
+    <p th:text="${burger.name}">NAME</p>
+    <li th:text="${burger.ingredients}">BURGER COMPONENTS</li>
+</ul>
+<!--    order more button-->
+
+<a th:href="assembleBurger"><h5><u>order one more</u></h5></a>
+<h2>Enter your address:</h2>
+<form action="makeOrder" method="post" th:object="${order}">
+<!--    <div class="order-entity" th:each="order: ${order}">-->
+        <div class="address">
+            <label for="city">city:</label>
+            <input type="text" id="city" placeholder="city" th:field="*{city}">
+        </div>
+        <div class="address">
+            <label for="street">street:</label>
+            <input type="text" id="street" placeholder="street" th:field="*{street}">
+        </div>
+        <div class="address">
+            <label for="apartment">apartment:</label>
+            <input type="text" id="apartment" placeholder="apartment" th:field="${order.apartment}">
+        </div>
+<!--    </div>-->
+    <button type="submit">Order</button>
+</form>
 </body>
 </html>
