--- a/src/main/resources/templates/html/makeOrder.html
+++ b/src/main/resources/templates/html/makeOrder.html
@@ -19,6 +19,9 @@
         display: flex;
         flex-direction: row;
     }
+    .validation-error{
+        color: red;
+    }
 </style>
 <body>
 <h1>Your Order</h1>
@@ -36,18 +39,25 @@
     <div class="address">
         <label for="city">city:</label>
         <input type="text" id="city" placeholder="city" th:field="*{city}">
+        <span class="validation-error" th:if="${#fields.hasErrors('city')}" th:errors="*{city}">city Error</span>
+
     </div>
     <div class="address">
         <label for="street">street:</label>
         <input type="text" id="street" placeholder="street" th:field="*{street}">
+        <span class="validation-error" th:if="${#fields.hasErrors('street')}" th:errors="*{street}">Street Error</span>
+
     </div>
     <div class="address">
         <label for="apartment">apartment:</label>
         <input type="text" id="apartment" placeholder="apartment" th:field="${order.apartment}">
+        <span class="validation-error" th:if="${#fields.hasErrors('apartment')}" th:errors="*{apartment}">apartment Error</span>
+
     </div>
     <div class="address">
-        <label for="credit card number">apartment:</label>
+        <label for="credit card number">credit card number:</label>
         <input type="text" id="credit card number" placeholder="credit card number" th:field="*{creditCardNumber}">
+        <span class="validation-error" th:if="${#fields.hasErrors('creditCardNumber')}" th:errors="*{creditCardNumber}">CC Num Error</span>
     </div>
     <button type="submit">Order</button>
 </form>
